# introduction-portfolio-construction

./: .gitignore  CHANGELOG.md  README.md  introduction-portfolio-construction.cabal
data/: Portfolios_Formed_on_ME_monthly_EW.csv
src/: Returns.hs  ReturnsData.hs  ReturnsFrames.hs  ReturnsVectors.hs
