cabal-version:      2.4
name:               introduction-portfolio-construction
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:
    https://github.com/JamesTadleyGreen/introduction-portfolio-construction

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             James Green
maintainer:         JamesTadleyGreen@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  ReturnsVectors,
                      ReturnsFrames,
                      ReturnsRaw

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      Frames == 0.7.*,
                      pipes == 4.3.* ,
                      foldl==1.4.*,
                      microlens == 0.4.13.*,
                      statistics == 0.16.*,
                      vector == 0.13.*,
                      vinyl==0.14.*,
                      time==1.12.*
    hs-source-dirs:   src
    default-language: Haskell2010

executable introduction-portfolio-construction
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        introduction-portfolio-construction

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite introduction-portfolio-construction-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0
